--- a/c-legacy-releases/2025/09112025.md
+++ b/c-legacy-releases/2025/09112025.md
@@ -77,8 +77,8 @@ ht-degree: 99%
 
 | 產品 | 資源 | 說明 | 發佈日期 |
 | ------- | ------- | ------- | ------- |
-| [!DNL Experience Cloud] | [ [!DNL Experience Cloud]中的](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/agentic-ai)代理式AI | 尋找說明或檢查Experience Platform Agent Orchestrator等AI代理程式的可用性。 | 2025 年 9 月更新 |
-| [!DNL Experience Cloud] | [ [!DNL Experience Cloud] 中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai) | 在 Experience Cloud 應用程式中尋找關於生成式 AI (GenAI) 及 AI 助理的說明。 | 2025 年 9 月更新 |
+| [!DNL Experience Cloud] | [&#x200B; [!DNL Experience Cloud]中的](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/agentic-ai)代理式AI | 尋找說明或檢查Experience Platform Agent Orchestrator等AI代理程式的可用性。 | 2025 年 9 月更新 |
+| [!DNL Experience Cloud] | [&#x200B; [!DNL Experience Cloud] 中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai) | 在 Experience Cloud 應用程式中尋找關於生成式 AI (GenAI) 及 AI 助理的說明。 | 2025 年 9 月更新 |
 | Customer Journey Analytics | [使用 AI 助理](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/cja-basics/use-ai-assistant) | 瞭解 Customer Journey Analytics 的 AI 助理如何助您一臂之力，協助您學習各種概念、針對問題進行疑難排解以及將工作流程最佳化。 | 2025 年 8 月 |
 | [!DNL AI Assistant in Marketo Email Designer] | [電子郵件設計工具](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/product-docs/email-marketing/email-designer/ai-assistant?lang=en) | Marketo Engage Email Designer 中的 AI 助理可協助您快速建立現代化、有效的電子郵件。其利用 Adobe 的生成式 AI、提示資料庫和 Firefly 來產生影像，針對您的客群、歷程階段、策略或調性打造客製化內容。您也可以結合自己的品牌資產。 | 2025 年 8 月 |
 
@@ -361,7 +361,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 +++發行說明、新的教學課程，以及支援文章
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -461,7 +461,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 如需詳細資訊，請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)。
 
-**注意：**[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
+**注意：**&#x200B;[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
 
 ### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
@@ -536,7 +536,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 發行版本：**2025 年 9 月**
 
 * [最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/current)
-* [!DNL Marketo Engage] [ 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
+* [!DNL Marketo Engage] [&#x200B; 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
 * Dynamic Chat [發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/dynamic-chat) (**2025 年 6 月 30 日**)
 
 <!-- ### New Marketo tutorials {#tutorials-marketo}
@@ -658,13 +658,13 @@ New articles and updates to existing articles for [!DNL Marketo].
 
 2025 年 9 月 3 日
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2025 年 7 月 30 日
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
