--- a/c-legacy-releases/2025/07162025.md
+++ b/c-legacy-releases/2025/07162025.md
@@ -24,7 +24,7 @@ ht-degree: 99%
 +++檢視產品連結
 
 * [活動排程](#events)
-* [ [!DNL Experience Cloud] 中的 AI 運用資源](#ai)
+* [&#x200B; [!DNL Experience Cloud] 中的 AI 運用資源](#ai)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Adobe Experience Cloud] - 中央介面與管理](#ecloud)
 * [[!DNL Adobe Experience Platform]](#platform)
@@ -71,9 +71,9 @@ ht-degree: 99%
 
 | 產品 | 資源 | 說明 |
 | ------- | ------- | ------- |
-| [!DNL Experience Cloud] | [ [!DNL Experience Cloud] 中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai) | 在 Experience Cloud 應用程式中尋找關於生成式 AI (GenAI) 及 AI 助理的說明。 |
+| [!DNL Experience Cloud] | [&#x200B; [!DNL Experience Cloud] 中的生成式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/generative-ai) | 在 Experience Cloud 應用程式中尋找關於生成式 AI (GenAI) 及 AI 助理的說明。 |
 | [!DNL Experience Cloud] | [代理式 AI](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/agentic-ai) | 深入了解產品支援代理及 Data Insights 代理 (代理式 AI) |
-| [!DNL Customer Journey Analytics] | [ [!DNL Content Analytics] 簡介](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/content-analytics/introduction-to-content-analytics) | 了解 Content Analytics 如何運用 AI 及 Experience Platform 基礎結構，深入洞察內容成效的關鍵因素。團隊可以更有效地提升參與度、推動轉換，並做出更明智、更有資料依據的決策。 |
+| [!DNL Customer Journey Analytics] | [&#x200B; [!DNL Content Analytics] 簡介](https://experienceleague.adobe.com/zh-hant/docs/customer-journey-analytics-learn/tutorials/content-analytics/introduction-to-content-analytics) | 了解 Content Analytics 如何運用 AI 及 Experience Platform 基礎結構，深入洞察內容成效的關鍵因素。團隊可以更有效地提升參與度、推動轉換，並做出更明智、更有資料依據的決策。 |
 | [!DNL Journey Optimizer] | [Journey Optimizer 中公式產生器介面的指南](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/tutorials/decision-capabilities/decisioning/formula-builder-ui) | 了解如何使用 Adobe Journey Optimizer 中的 AI 公式產生器，建立自訂產品建議排名策略。 |
 | [!DNL Journey Optimizer] | [使用 Adobe Web SDK 擷取產品建議互動，用於 AI 模型訓練](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-learn/personalizing-offers-with-real-time-weather-data/capturing-offer-interactions-with-web-sdk-ai-model) | 了解如何使用 Adobe Experience Platform Web SDK (alloy.js) 擷取使用者互動資料，例如產品建議印象和點擊。此份資料可作為 Adobe Journey Optimizer (AJO) 中訓練 AI 模型的基礎，以根據使用者行為與內容訊號，智慧地為產品建議進行排名。 |
 
@@ -382,7 +382,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 +++發行說明、新的教學課程，以及支援文章
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -414,7 +414,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2025 年 6 月 | [延遲支付服務報告資料](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26837) | 新文章 | 了解 Adobe Commerce 中支付服務報告資料延遲時的解決方案。 |
 | 2025 年 6 月 | [PayPal 閘道拒絕請求 - 發票重複問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26838) | 新文章 | 了解當重複發票 ID 寄送至 PayPal 導致出現錯誤時，該如何解決此問題。 |
 | 2025 年 6 月 | [減少在 2.4.6 升級之前顯示已過期 `oauth_tokens` 的數量](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26848) | 新文章 | 了解當 `oauth_token` 表格中出現大量 `oauth_tokens`，且可能導致升級到版本 2.4.6 時出現長時間延遲的情況，該如何解決此問題。 |
-| 2025 年 6 月 | [ [!DNL Upgrade Compatibility Tool]  錯誤的故障排除](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26849) | 新文章 | 了解使用 [!DNL Upgrade Compatibility Tool] 時出現錯誤問題的解決方案。 |
+| 2025 年 6 月 | [&#x200B; [!DNL Upgrade Compatibility Tool]  錯誤的故障排除](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26849) | 新文章 | 了解使用 [!DNL Upgrade Compatibility Tool] 時出現錯誤問題的解決方案。 |
 | 2025 年 6 月 | [在 Adobe Commerce 中存取  [!DNL Site-Wide Analysis Tool]  時出現 403 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26852) | 新文章 | 了解在 Adobe Commerce 中嘗試存取 [!DNL Site-Wide Analysis Tool] 時出現 403 錯誤，該如何解決此問題。 |
 | 2025 年 6 月 | [管理介面密碼以純文字形式儲存至動作記錄中](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26853) | 新文章 | 了解當 Commerce 管理員建立具有管理員權限的新使用者，且將密碼以純文字形式儲存至 `magento_logging_event_changes` 資料庫表格中時，該如何解決此問題。 |
 | 2025 年 6 月 | [如何查看 [!DNL cron] 停用原因](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-26854) | 新文章 | 了解雲端基礎結構的 Adobe Commerce 產品與 [!DNL cron] 有關問題的解決方案。 |
@@ -536,7 +536,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * 請參閱 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer/using/whats-new/release-notes)取得更新和協助
 
-**注意：**[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
+**注意：**&#x200B;[Journey Optimizer for B2B Edition](#journey-optimizer-b2b-edition) 是一款單獨的產品。
 
 ### [!DNL Journey Optimizer] 最新教學課程 {#tutorials-ajo}
 
@@ -619,7 +619,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 發行日期：**2025 年 7 月 11 日**
 
 * [最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/current)
-* [!DNL Marketo Engage] [ 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
+* [!DNL Marketo Engage] [&#x200B; 發行排程](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/release-schedule)
 * Dynamic Chat [發行說明](https://experienceleague.adobe.com/zh-hant/docs/marketo/using/release-notes/dynamic-chat) (**2025 年 6 月 30 日**)
 
 <!-- ### New Marketo tutorials {#tutorials-marketo}
@@ -734,13 +734,13 @@ New tutorials published for Adobe Marketo.
 
 2025 年 7 月 2 日
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
 2025 年 7 月 2 日
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++
 
