Updated by mdAutofix.py

--- a/c-legacy-releases/2021/06172021.md
+++ b/c-legacy-releases/2021/06172021.md
@@ -146,7 +146,7 @@ Experience Cloud 中央介面元件包括可從統一產品標題存取的更新
 ### Adobe Analytics 中的修正 {#aa-fixes}
 
 * 修正「收入即時」報表中顯示錯誤貨幣的問題。 (AN-254649)
-* 更新報告 ](https://experienceleague.adobe.com/docs/analytics/components/dimensions/evar.html?lang=zh-Hant) 中 [eVar 區分大小寫的說明檔案。 (AN-246438)
+* 更新報告 [&#128279;](https://experienceleague.adobe.com/docs/analytics/components/dimensions/evar.html?lang=zh-Hant) 中 eVar 區分大小寫的說明檔案。 (AN-246438)
 * 更新說明檔案，以便更妥善說明[資料摘要實施](https://experienceleague.adobe.com/docs/analytics/export/analytics-data-feed/create-feed.html?lang=zh-Hant)和[此處](https://experienceleague.adobe.com/docs/analytics/export/analytics-data-feed/df-faq.html#BucketOwnerFullControl)。 (AN-219485)
 * 修正 Data Warehouse 報告中未傳送部分資料的問題 (AN-259951；AN-259712；AN-260107；AN-259953)
 
