--- a/c-legacy-releases/2021/08192021.md
+++ b/c-legacy-releases/2021/08192021.md
@@ -48,7 +48,7 @@ Experience Cloud 應用程式和服務每月都會更新。 此頁面是尋找 [
 
 **2021 年 8 月 26 日** | [讓您的客群細分群體更加智能](https://www.youtube.com/watch?v=rogVKsTFbWk) - 與 Doug Moore、Aaron Shields、Yaya Wang 和 Andres Monroy 一同認識 Experience Platform 中的客戶細分工具！
 
-如需更多影片，請造訪 YouTube 上的 [ Experience League 頻道](https://www.youtube.com/channel/UCN-7ZEctit8Qu01BWeHQ0Fw)。
+如需更多影片，請造訪 YouTube 上的 [&#x200B; Experience League 頻道](https://www.youtube.com/channel/UCN-7ZEctit8Qu01BWeHQ0Fw)。
 
 ## Experience Cloud 中央 UI 元件 {#ecloud}
 
