--- a/c-legacy-releases/2022/06152022.md
+++ b/c-legacy-releases/2022/06152022.md
@@ -15,7 +15,7 @@ ht-degree: 98%
 
 # Adobe Experience Cloud 版本注意事項 - 2022 年 6 月
 
-身為 Experience Maker，您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
+身為 Experience Maker，您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
 
 >[!NOTE]
 >
@@ -44,7 +44,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [&#x200B; Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## [!DNL Adobe System Status] {#status}
 
@@ -192,7 +192,7 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
   _新功能_
 
    * [Dynamic Media 智慧型影像處理現在支援 AVIF 檔案格式](https://medium.com/adobetech/one-solution-fits-all-smart-imaging-with-aem-dynamic-media-be690b62df9f) - 進一步改進 Google Core Web Vital (最大內容繪製)；相較於 WebP，AVIF 提供 20% 的額外大小縮減。相較於 JPEG，AVIF 提供了 41% 的總平均大小縮減率 (在某些影像中甚至高達 76%)。
-   * Experience Manager Assets Brand Portal 現在每 12 小時執行一次自動作業，以刪除發佈給 Experience Manager 的所有 Brand Portal 資產。因此，不需要手動刪除「貢獻」資料夾中的資產，以使資料夾大小低於臨界值限制。請參閱 [ Experience Manager Assets Brand Portal 新增功能](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/whats-new.html)。
+   * Experience Manager Assets Brand Portal 現在每 12 小時執行一次自動作業，以刪除發佈給 Experience Manager 的所有 Brand Portal 資產。因此，不需要手動刪除「貢獻」資料夾中的資產，以使資料夾大小低於臨界值限制。請參閱 [&#x200B; Experience Manager Assets Brand Portal 新增功能](https://experienceleague.adobe.com/docs/experience-manager-brand-portal/using/introduction/whats-new.html)。
 
   _搶鮮版通道的新功能_
 
@@ -394,8 +394,8 @@ Adobe [!DNL Workfront] 是統一的工作管理應用程式，用於共用構想
 [!DNL Adobe Advertising Cloud] 發行說明。
 
 <!-- * [New features across [!DNL Advertising Cloud]](#adcloud-all) -->
-* [ [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
-* [ [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
+* [&#x200B; [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
+* [&#x200B; [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
 <!-- * [New [!DNL Advertising Cloud] tutorials](#tutorials-ad-cloud) -->
 
 <!--
