--- a/c-legacy-releases/2023/07122023.md
+++ b/c-legacy-releases/2023/07122023.md
@@ -121,7 +121,7 @@ ht-degree: 99%
 | -----------| ---------- |---------- |
 | 2023 年 7 月 | [將範例資料匯入 [!DNL Experience Platform]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/import-sample-data.html?lang=zh-Hant) | 已更新的影片 | 了解如何設定包含範例資料的 [!DNL Experience Platform] 沙箱環境。您可以使用 [!UICONTROL Postman] 集合來建立欄位群組、結構描述、資料集，然後將範例資料匯入 [!DNL Experience Platform]。 |
 | 2023 年 7 月 | [驗證及存取  [!DNL Experience Platform] API](https://experienceleague.adobe.com/docs/platform-learn/tutorials/platform-api-authentication.html?lang=zh-Hant) | 已更新的影片 | 開始使用 Adobe [!DNL Experience Platform] API。本教學課程將指導您完成建立身份驗證憑據並提出 [!DNL Experience Platform] API 請求的程序。 |
-| 2023 年 7 月 | [ [!DNL Experience Platform] 資料架構師和資料工程師快速入門](https://experienceleague.adobe.com/docs/platform-learn/getting-started-for-data-architects-and-data-engineers/overview.html) | 更新的教學課程 | 本教學課程是以 [!DNL Experience Platform] 進行操作的最佳起點。 |
+| 2023 年 7 月 | [&#x200B; [!DNL Experience Platform] 資料架構師和資料工程師快速入門](https://experienceleague.adobe.com/docs/platform-learn/getting-started-for-data-architects-and-data-engineers/overview.html) | 更新的教學課程 | 本教學課程是以 [!DNL Experience Platform] 進行操作的最佳起點。 |
 | 2023 年 7 月 | [使用[!UICONTROL 更新插入]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/profiles/update-a-specific-attribute-with-upsert.html)更新特定的輪廓文件屬性 | 影片 | 了解如何使用 [!DNL Experience Platform] 的 `upsert` 功能更新輪廓文件的特定屬性。 |
 
 {style="table-layout:auto"}
@@ -379,9 +379,9 @@ _錯誤修正_
 
 ### 社群
 
-**網路研討會影片：**_掌握 Experience Manager 認證的藝術：做好準備、一切就緒、獲得認證！_
+**網路研討會影片：**&#x200B;_掌握 Experience Manager 認證的藝術：做好準備、一切就緒、獲得認證！_
 
-為了確保每個人都能存取網絡研討會期間的共用重要內容，我們很樂意為您提供影片。您可以在自己方便的時候，到網站瀏覽 AEM 社區對話串並觀看影片內容：[ Adobe Experience Manager Sites 及更多](https://adobe.ly/3p2CmbA)
+為了確保每個人都能存取網絡研討會期間的共用重要內容，我們很樂意為您提供影片。您可以在自己方便的時候，到網站瀏覽 AEM 社區對話串並觀看影片內容：[&#x200B; Adobe Experience Manager Sites 及更多](https://adobe.ly/3p2CmbA)
 
 AEM as a Cloud Service [2023.6.0 - 版本更新](https://adobe.ly/444zA4U)
 
@@ -476,7 +476,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
+>[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search &#x200B;](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html?lang=zh-Hant)。
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
@@ -708,11 +708,11 @@ Last updated: **August 9, 2022**
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [&#x200B; [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html)
 
 +++
 
