--- a/c-legacy-releases/2022/01192022.md
+++ b/c-legacy-releases/2022/01192022.md
@@ -45,7 +45,7 @@ ht-degree: 97%
 * [[!DNL Adobe Document Cloud]](#doc-cloud)
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## [!DNL Experience League] 活動 {#events}
 
@@ -232,8 +232,8 @@ Adobe 建議您造訪 [Experience Manager 版本更新與藍圖](https://experie
 
   觀看 [2021 年 12 月發佈概觀影片](https://video.tv.adobe.com/v/339278)，了解 2021.11.0 (2021 年 11 月) 版本新增功能摘要。
 
-   * [](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
-   * [](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/338253)2021 年 10 月版本概觀 新功能影片。
+   * [&#128279;](https://video.tv.adobe.com/v/337381)2021 年 9 月版本概觀 新功能影片。
 
    * **Experience Manager Assets as a Cloud Service**
 
@@ -479,9 +479,9 @@ Adobe [!DNL Workfront] 是統一的工作管理應用程式，用於共用構想
 
 [!DNL Adobe Advertising Cloud] 版本注意事項。
 
-* [ [!DNL Advertising Cloud] 的新功能](#adcloud-all)
-* [ [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
-* [ [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
+* [&#x200B; [!DNL Advertising Cloud] 的新功能](#adcloud-all)
+* [&#x200B; [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
+* [&#x200B; [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
 * [新  [!DNL Advertising Cloud] 教學課程](#tutorials-ad-cloud)
 
 ### [!DNL Advertising Cloud] 的新功能 {#adcloud-all}
