--- a/c-legacy-releases/2022/09072022.md
+++ b/c-legacy-releases/2022/09072022.md
@@ -15,7 +15,7 @@ ht-degree: 98%
 
 # Adobe Experience Cloud 版本注意事項 - 2022 年 9 月
 
-身為 Experience Maker，您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
+身為 Experience Maker，您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)。尋找廣大的操作說明文件庫、自我引導式教學課程、操作說明影片、所有等級和角色適用的課程、線上同業社群，以及需要時的專家支援。
 
 >[!NOTE]
 >
@@ -44,7 +44,7 @@ ht-degree: 98%
 * [[!DNL Adobe Creative Cloud for enterprise]](#creative-cloud)
 * [數位體驗藍圖 - 教學課程](#blueprints)
 
-需要協助嗎？請造訪 [ Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
+需要協助嗎？請造訪 [&#x200B; Experience League](https://experienceleague.adobe.com/?lang=zh-Hant/#home)，了解產品和技術文件、Adobe 策畫的課程、教學課程影片、快速解答、社群分析，以及由講師授課的訓練課程。
 
 ## [!DNL Adobe System Status] {#status}
 
@@ -288,7 +288,7 @@ _新功能_
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote]服務終止時間定於 **2022 年 9 月 1 日**。對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/search-promote/using/sp-eol.html)。
+>[!DNL Adobe Search&Promote]服務終止時間定於 **2022 年 9 月 1 日**。對於產品和商業搜尋，[Live Search &#x200B;](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/search-promote/using/sp-eol.html)。
 
 ### 新的 Adobe Commerce 教學課程和文件 {#tutorials-commerce}
 
@@ -419,8 +419,8 @@ Experience League 最新的 Workfront 課程與教學課程集錦。
 [!DNL Adobe Advertising Cloud] 發行說明。
 
 <!-- * [New features across [!DNL Advertising Cloud]](#adcloud-all) -->
-* [ [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
-* [ [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
+* [&#x200B; [!DNL Advertising Cloud DSP] 中的新功能](#adcloud-dsp)
+* [&#x200B; [!DNL Advertising Cloud Search] 中的新功能](#adcloud-search)
 <!-- * [New [!DNL Advertising Cloud] tutorials](#tutorials-ad-cloud) -->
 
 <!--
@@ -462,7 +462,7 @@ Last updated: **August 9, 2022**
 |  | 現已推出[!UICONTROL 查詢交叉比對測試版]分析。 |
 | [!UICONTROL 報表] | (僅 [!DNL Google Ads] 帳戶) 新的專業報告 [!UICONTROL RSA 資產報告]會顯示一個或多個產品組合或一個或多個帳戶、行銷活動和廣告群組中的回應式搜尋廣告 (RSA) 的每個資產 ([!UICONTROL 創意標題]或[!UICONTROL 描述]) 的印象指標。根據預設，對於在指定資料范圍內至少獲得一次印象的各個資產，資料會包含一列，即使資產在報告期間被停用 (移除) 也是如此。**備註：**&#x200B;當您選擇「[!UICONTROL 包括沒有績效資料的列]」選項時，資料仍然不會包括從未收到資料的資產資料。 |
 |  | [!UICONTROL 廣告變體報告]中提供了對回應式搜尋廣告 (RSA) 的額外支援：<ul><ul>(僅 [!DNL Google Ads] 帳戶)在[!UICONTROL 欄]設定中，新的「[!UICONTROL 廣告強度]」欄表示 RSA 遵循 [!DNL Google Ads] 最佳實務績效的程度。[!UICONTROL 行銷活動] > [!UICONTROL 廣告]檢視中提供了相同的欄。[!DNL Microsoft® Advertising] 尚未透過其 API 啟用類似的支援。</li><li>在[!UICONTROL 欄]設定中，您可以依「[!UICONTROL 創意標題]」和「[!UICONTROL 說明]」對報告結果進行排序。</li><li>在[!UICONTROL 進階篩選器]設定中，您可以依[!UICONTROL 廣告文字]欄位進行篩選，該欄位會同時套用至「[!UICONTROL 廣告標題]」和「[!UICONTROL 說明]」。</li></ul> |
-| [!UICONTROL 推薦] | ([!DNL Google Ads] 帳戶; 測試版功能) 在「[!UICONTROL 分析與報告] > [!UICONTROL  推薦測試版]」中，您可以：<ul><li>查看尚未針對 [!DNL Google Ads] 帳戶執行的所有建議概覽。</li><li>套用和拒絕帳戶建議。</li><li>檢視已針對帳戶套用的每個建議記錄。</li></ul><br>支援的建議：<li><strong>建議類別；建議類型；說明</strong></li><li>廣告和附加資訊；CALL_EXTENSION；為行銷活動新增來電附加資訊</li><li>廣告和附加資訊；CALLOUT_EXTENSION；為行銷活動新增呼籲附加資訊</li><li>廣告和附加資訊；OPTIMIZE_AD_ROTATION：使用最佳化的廣告輪換</li><li>廣告和附加資訊；RESPONSIVE SEARCH_AD；新增回應式搜尋廣告</li><li>廣告和附加資訊；RESPONSIVE_SEARCH_AD_ASSET；將回應式搜尋廣告資產新增至廣告</li><li>廣告和附加資訊；SITELINK_EXTENSION；為行銷活動新增網站連結附加資訊</li><li>廣告和附加資訊；TEXT_AD；新增廣告建議</li><li>投標和預算；CAMPAIGN BUDGET；修正受預算限制的行銷活動</li><li>投標和預算；ENHANCED_CPC_OPT_IN；使用增強型 CPC 投標</li><li>投標和預算；FORECASTING_CAMPAIGN BUDGET；修正預計未來會受預算限制的行銷活動</li><li>投標和預算；MARGINAL ROI_CAMPAIGN BUDGET；調整行銷活動預算以提高投資報酬率</li><li>投標和預算；MAXIMIZE CLICKS OPT_IN；使用最大化點按次數投標</li><li>投標和預算；MAXIMIZE CONVERSIONS OPT_IN；使用最大化轉換次數投標</li><li>投標和預算；MOVE_UNUSED_BUDGET；將未使用的預算移動到受限的預算</li><li>投標和預算；TARGET_CPA_OPT_IN；使用目標 CPA 投標</li><li>投標和預算；TARGET_ROAS_OPT_IN；使用目標 ROAS 投標</li><li>關鍵字和鎖定；KEYWORD；新增關鍵字</li><li>關鍵字和鎖定；SEARCH_PARTNERS_OPT_IN；透過 Google 搜尋合作夥伴擴大觸及範圍</li><li>關鍵字和鎖定；USE_BROAD MATCH KEYWORD；透過<strong>全自動的基於轉換的投標</strong>對基於轉換的行銷活動使用廣泛比對</li> |
+| [!UICONTROL 推薦] | ([!DNL Google Ads] 帳戶; 測試版功能) 在「[!UICONTROL 分析與報告] > [!UICONTROL &#x200B; 推薦測試版]」中，您可以：<ul><li>查看尚未針對 [!DNL Google Ads] 帳戶執行的所有建議概覽。</li><li>套用和拒絕帳戶建議。</li><li>檢視已針對帳戶套用的每個建議記錄。</li></ul><br>支援的建議：<li><strong>建議類別；建議類型；說明</strong></li><li>廣告和附加資訊；CALL_EXTENSION；為行銷活動新增來電附加資訊</li><li>廣告和附加資訊；CALLOUT_EXTENSION；為行銷活動新增呼籲附加資訊</li><li>廣告和附加資訊；OPTIMIZE_AD_ROTATION：使用最佳化的廣告輪換</li><li>廣告和附加資訊；RESPONSIVE SEARCH_AD；新增回應式搜尋廣告</li><li>廣告和附加資訊；RESPONSIVE_SEARCH_AD_ASSET；將回應式搜尋廣告資產新增至廣告</li><li>廣告和附加資訊；SITELINK_EXTENSION；為行銷活動新增網站連結附加資訊</li><li>廣告和附加資訊；TEXT_AD；新增廣告建議</li><li>投標和預算；CAMPAIGN BUDGET；修正受預算限制的行銷活動</li><li>投標和預算；ENHANCED_CPC_OPT_IN；使用增強型 CPC 投標</li><li>投標和預算；FORECASTING_CAMPAIGN BUDGET；修正預計未來會受預算限制的行銷活動</li><li>投標和預算；MARGINAL ROI_CAMPAIGN BUDGET；調整行銷活動預算以提高投資報酬率</li><li>投標和預算；MAXIMIZE CLICKS OPT_IN；使用最大化點按次數投標</li><li>投標和預算；MAXIMIZE CONVERSIONS OPT_IN；使用最大化轉換次數投標</li><li>投標和預算；MOVE_UNUSED_BUDGET；將未使用的預算移動到受限的預算</li><li>投標和預算；TARGET_CPA_OPT_IN；使用目標 CPA 投標</li><li>投標和預算；TARGET_ROAS_OPT_IN；使用目標 ROAS 投標</li><li>關鍵字和鎖定；KEYWORD；新增關鍵字</li><li>關鍵字和鎖定；SEARCH_PARTNERS_OPT_IN；透過 Google 搜尋合作夥伴擴大觸及範圍</li><li>關鍵字和鎖定；USE_BROAD MATCH KEYWORD；透過<strong>全自動的基於轉換的投標</strong>對基於轉換的行銷活動使用廣泛比對</li> |
 | [!UICONTROL 匯入行銷活動] | (測試版功能) 您可以從「[!UICONTROL 工具] > [!UICONTROL 匯入行銷活動]」將您的 [!DNL Google Display Network] 行銷活動 (包括廣告圖片) 匯入 [!DNL Microsoft® Audience Network] 上的 [!DNL Microsoft® Advertising] 客群行銷活動。匯入行銷活動後，您可以檢查匯入工作的狀態、檢閱任何錯誤記錄檔，以及編輯、暫停或刪除匯入排程。 |
 
 {style="table-layout:auto"}
