--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -23,7 +23,7 @@ ht-degree: 98%
 
 **需要協助嗎?**
 
-您的成功之道始於 [ Experience League](https://experienceleague.adobe.com/#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
+您的成功之道始於 [&#x200B; Experience League](https://experienceleague.adobe.com/#home)。 瀏覽 Adobe 龐大的自助[產品文件](https://experienceleague.adobe.com/docs/)和引導式[教學課程影片](https://experienceleague.adobe.com/docs/home-tutorials.html?lang=zh-Hant)。尋找各種等級和角色的[課程](https://experienceleague.adobe.com/#courses)，向我們同業的線上[社群](https://experienceleaguecommunities.adobe.com/?profile.language=en)提問，並在您需要時獲得專家[支援](https://experienceleague.adobe.com/?support-tab=home#support)。
 
 ## 產品發行更新和活動
 
@@ -408,7 +408,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 >[!NOTE]
 >
->[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search ](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html)。
+>[!DNL Adobe Search&Promote] 服務終止時間為 **2022 年 9 月 1 日**。 對於產品和商業搜尋，[Live Search &#x200B;](https://experienceleague.adobe.com/docs/commerce-merchant-services/live-search/overview.html?lang=zh-Hant)是 Adobe 的搜尋應用程式。如需了解詳細資訊，請參閱[產品壽命結束公告](https://experienceleague.adobe.com/docs/discontinued/using/search-promote.html)。
 
 ### 全新的 [!DNL Adobe Commerce] 教學課程 {#tutorials-commerce}
 
@@ -616,8 +616,8 @@ Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 +++詳細資料
 
 <!-- * [New features across [!DNL Advertising]](#advertising-all) -->
-* [ [!DNL Advertising DSP] 中的新功能](#advertising-dsp)
-* [ [!DNL Advertising Search] 中的新功能](#advertising-search)
+* [&#x200B; [!DNL Advertising DSP] 中的新功能](#advertising-dsp)
+* [&#x200B; [!DNL Advertising Search] 中的新功能](#advertising-search)
 <!-- * [New [!DNL Advertising] tutorials](#tutorials-advertising) -->
 
 <!--
@@ -664,7 +664,7 @@ Last updated: **August 9, 2022**
 
 >[!NOTE]
 >
->**品牌更新：**_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
+>**品牌更新：**&#x200B;_Adobe Document Services_&#x200B;現在是 _Adobe Acrobat Services_。請在[這裡](https://blog.developer.adobe.com/adobe-document-services-is-now-adobe-acrobat-services-f8e3e506b7b1)了解相關內容。
 
 +++詳細資料
 
