--- a/c-legacy-releases/2024/03132024.md
+++ b/c-legacy-releases/2024/03132024.md
@@ -169,7 +169,7 @@ ht-degree: 99%
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
-| 2024 年 2 月 |  [!DNL Adobe Experience Platform]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23641.html?lang=zh-Hant) 中的[[!UICONTROL 預設值擷取] | 新文章 | 了解如果您需要在 [!DNL Adobe Experience Platform (AEP)] 的擷取期間設定預設值 (特別是針對 [!DNL upsert] 作業)，您必須在資料擷取過程中使用明確對應。 |
+| 2024 年 2 月 |  [!DNL Adobe Experience Platform][&#128279;](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23641.html?lang=zh-Hant) 中的[!UICONTROL 預設值擷取] | 新文章 | 了解如果您需要在 [!DNL Adobe Experience Platform (AEP)] 的擷取期間設定預設值 (特別是針對 [!DNL upsert] 作業)，您必須在資料擷取過程中使用明確對應。 |
 
 {style="table-layout:auto"}
 
@@ -511,7 +511,7 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 
 +++詳細資料
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/docs/commerce-operations/release/notes/overview.html?lang=zh-Hant)以取得最新資訊。
 * 請參閱「[Adobe Commerce 服務指南](https://experienceleague.adobe.com/docs/commerce-merchant-services/user-guides/home.html?lang=zh-Hant)」以查看 Commerce 服務發行資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/docs/commerce-operations/release/product-availability.html?lang=zh-Hant)以存取個別的產品發行說明並確認可用性。
 
@@ -748,11 +748,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
+查看 [&#x200B; [!DNL Advertising DSP] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/dsp/home.html?lang=zh-Hant)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce] 中的新增功能](https://experienceleague.adobe.com/docs/advertising/search-social-commerce/home.html?lang=zh-Hant)
 
 +++
 
@@ -764,7 +764,7 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 >[!NOTE]
 >
->_[!DNL Adobe Primetime]_現在稱為_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
+>_[!DNL Adobe Primetime]_&#x200B;現在稱為&#x200B;_[!DNL Adobe Pass]_。在品牌重塑工作完成之前，您可能很快就會在文件中看到這兩個品牌名稱。
 
 請參閱 [Adobe Pass 發行說明](https://experienceleague.adobe.com/docs/pass.html?lang=zh-Hant)以找到特定版本的資訊、系統需求、限制、已修正的問題和已知問題。
 
