--- a/c-legacy-releases/2024/07172024.md
+++ b/c-legacy-releases/2024/07172024.md
@@ -245,7 +245,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 所有 [!DNL Experience Manager] 的發行說明都會保留在以下頁面：
 
 * [[!DNL Experience Manager:]  發行更新和藍圖](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-release-information/aem-release-updates/home) - 了解 [!DNL Experience Manager:] 發行藍圖、之前的發行更新及文件更新。
-* [ [!DNL Experience Manager:] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
+* [&#x200B; [!DNL Experience Manager:] as a Cloud Service 最新發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/release-notes/release-notes/release-notes-current)
 * [[!DNL Experience Manager:] 6.5 Service Pack 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-65/content/release-notes/release-notes)
 * [[!DNL Experience Manager:] Cloud Manager 發行說明](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-manager/content/release-notes/current)
 * [Automated Forms Conversion Service 發行說明](https://experienceleague.adobe.com/zh-hant/docs/aem-forms-automated-conversion-service/using/release-notes)
@@ -280,8 +280,8 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|--------|---------|---------|
-| 2024 年 6 月 | [非管理員群組無法在  [!DNL AEM] 中檢視  [!DNL Custom Search Rail] ](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24380) | 新文章 | 本文說明如何讓非管理員群組在 [!DNL Adobe Experience Manager] 中檢視 [!DNL Custom Search Rail]。為了讓使用者能夠存取所有面向，您需要 `/conf/global/settings/dam/search/facets` 讀取權限。 |
-| 2024 年 6 月 | [ [!DNL Experience Fragments]  允許範本的繼承問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-21002) | 新文章 | [!DNL Adobe Experience Manager] 中的 [!DNL Experience Fragments] 允許範本繼承方面出現問題。 |
+| 2024 年 6 月 | [非管理員群組無法在  [!DNL AEM] 中檢視  [!DNL Custom Search Rail] &#x200B;](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24380) | 新文章 | 本文說明如何讓非管理員群組在 [!DNL Adobe Experience Manager] 中檢視 [!DNL Custom Search Rail]。為了讓使用者能夠存取所有面向，您需要 `/conf/global/settings/dam/search/facets` 讀取權限。 |
+| 2024 年 6 月 | [&#x200B; [!DNL Experience Fragments]  允許範本的繼承問題](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-21002) | 新文章 | [!DNL Adobe Experience Manager] 中的 [!DNL Experience Fragments] 允許範本繼承方面出現問題。 |
 | 2024 年 6 月 | [[!DNL Copy Content Activity]  失敗並出現 *[!DNL javax.jcr.AccessDeniedException]* 錯誤](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24424) | 新文章 | 了解在 [!DNL Adobe Experience Manager] 命名空間註冊期間，內容回流作業失敗並出現 *[!DNL javax.jcr.AccessDeniedException]* 錯誤的原因。 |
 | 2024 年 6 月 | [[!DNL Dynamic Media URL] 回應 [!DNL byte-size]](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24461) | 新文章 | 了解如何從 [!DNL Dynamic Media Classic] 中的 [!DNL URL] 顯示原始轉譯時取得 DM 資產二進位大小。 |
 | 2024 年 6 月 | [[!DNL AEMaaCS]：如何使用管理員權限存取預覽層級的存放庫瀏覽器](https://experienceleague.adobe.com/zh-hant/docs/experience-cloud-kcs/kbarticles/ka-24457) | 新文章 | 了解如何使用自訂工作流程顯示所有節點，因為依預設，預覽層級的存放庫瀏覽器不會顯示所有節點 (例如 `/conf`、`/home` 和 `/var` 下的節點不會顯示。) |
@@ -299,7 +299,7 @@ New articles and updates to existing articles for [!DNL Analytics].
 
 +++詳細資料
 
-* 請參閱 [ [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
+* 請參閱 [&#x200B; [!DNL Adobe Commerce]  和  [!DNL Magento Open Source] 發行說明](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/notes/overview)以取得最新資訊。
 * 請參閱「[Adobe [!DNL Commerce] 服務指南](https://experienceleague.adobe.com/zh-hant/docs/commerce-merchant-services/user-guides/home)」，查看 Commerce 服務版本資訊和文件。
 * 請參閱[產品可用性](https://experienceleague.adobe.com/zh-hant/docs/commerce-operations/release/product-availability)以存取個別的產品發行說明並確認可用性。
 
@@ -555,11 +555,11 @@ New articles and updates to existing articles for [!DNL Workfront].
 
 ### [!DNL Advertising DSP] 中的新功能 {#advertising-dsp}
 
-查看 [ [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
+查看 [&#x200B; [!DNL Advertising DSP]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/dsp/home)
 
 ### [!DNL Advertising Search, Social, & Commerce] 中的新功能 {#advertising-search}
 
-查看 [ [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
+查看 [&#x200B; [!DNL Advertising Search, Social, & Commerce]中的新增功能](https://experienceleague.adobe.com/zh-hant/docs/advertising/search-social-commerce/home)
 
 +++## ![圖示](/assets/experience-league.png) Adobe內容Supply chain {#content-supply-chain}
 
